<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatistuquesActivity"
    android:background="#B2FDD5AE"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="15dp"

                    android:gravity="center_horizontal"
                    android:background="@drawable/border_bottm">

                    <TextView

                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chiffre_affaire"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:fontFamily="casual"/>

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/tv_chiffre_affaire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:text="1000"
                        android:textSize="15sp"
                        android:fontFamily="serif-monospace"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/border_bottm">

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ventes_comptant"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:fontFamily="casual"/>

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:id="@+id/tv_ventes_credit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:text="1000"
                        android:textSize="15sp"
                        android:fontFamily="serif-monospace"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="15dp"
                    android:paddingHorizontal="20dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/border_bottm">

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ventes_credit"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:fontFamily="casual"/>

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:id="@+id/tv_ventes_comptant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:text="1000"
                        android:textSize="15sp"
                        android:fontFamily="serif-monospace"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="15dp"
                    android:paddingHorizontal="20dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/border_bottm">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depense"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:fontFamily="casual"/>
                    <TextView
                        android:id="@+id/tv_depense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000"
                        android:paddingVertical="10dp"
                        android:textSize="15sp"
                        android:fontFamily="serif-monospace"
                        android:textStyle="bold"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rentabilite"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:fontFamily="casual"/>

                    <TextView
                        android:id="@+id/tv_rentabilite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="1000"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stat_list">

            </ListView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>